style.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

html, body{
    height: 100%;
}

*{
    margin:0;
    padding: 0; 
    font-family: "Roboto", sans-serif;
}

#registration-page{
    height: 100%;
    background-color: #78a7ba;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: scroll;
}

.signup-form{
    flex:1;
    background-color: #eff0f1;
    max-width: 600px;
    border-radius: 10px;
    border: 1px solid #999;
}

.form-header{
    padding: 15px 0;
    border-bottom: 1px solid #ccc;
}

.form-header h1{
    font-size: 28px;
    text-align: center;
    color:#666;
}

.form-body{
    background: white;
    padding: 5px 10px;
}

.row{
    display: flex;
    flex-direction: row;
}

.input-group {
    flex:1;
    display: flex;
    flex-direction: column;
    margin: 10px 5px;
}

label{
    color:#1bba93;
    font-size: 17px;
    font-weight: 500;
}

input[type="text"],
input[type="email"],
input[type="password"]
 {

    font-size: 18px;
    height: 34px;
    padding-left: 10px;
    color: #666;
    border: 1px solid #d6d6d6;
    border-radius: 4px;
    background: white;
    outline:none;

}

@media only screen and (max-width: 500px ) {
    
    .row{
        flex-direction: column;
    }


}

